<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_background_selector"
        android:descendantFocusability="afterDescendants"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="2" >

            <TextView
                android:id="@+id/txtid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="2" >

            <TextView
                android:id="@+id/txtaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll2"
            android:gravity="right"
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:paddingBottom="5dp" >

            <!--
                 <TextView
                android:id="@+id/textViewmore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="7dp"
                android:text="@string/strMore"
                android:textSize="15sp"
                android:textColor="#0054A6" />
            -->

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/strReports"
                android:textStyle="bold"
                android:textColor="#0054A6"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"

                android:text="@string/strDashboard"
                android:textStyle="bold"
                android:textColor="#0054A6"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:text="@string/strSelect"
                android:textStyle="bold"
                android:textColor="#0054A6"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>