<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#0054A6"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtviewlab"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="eLAB Assist"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txtviewlogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:text="@string/strlogout"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llserchbies_id"
        android:layout_below="@+id/ll"
        android:background="#0054A6"

        >


        <androidx.appcompat.widget.SearchView
            android:layout_width="match_parent"
            android:id="@+id/searchView_id"
            android:layout_height="wrap_content"

            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="#ffffff"


            />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/NestedScrollView_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llserchbies_id"
        android:layout_above="@+id/myProgressRegis_id"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="#e6e6e6"
        android:scrollbars="none">



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:layout_below="@+id/llserchbies_id"
            android:layout_above="@+id/myProgressRegis_id"
            android:orientation="vertical" >



            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/txtview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strRecentlyVisitedLaboratory"
                    android:textColor="#000000"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!--            <ListView
                            android:id="@+id/listviewRecent"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:cacheColorHint="@android:color/transparent"
                            android:divider="@null"
                            android:dividerHeight="0dp"
                            android:layout_marginLeft="0dp"
                            android:listSelector="@android:color/transparent" />-->

            <RelativeLayout
                android:id="@+id/ll1vdcv2_idhg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:orientation="vertical"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerrecent_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"

                    android:nestedScrollingEnabled="false"/>


            </RelativeLayout>


            <LinearLayout
                android:id="@+id/ll12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/txtview13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strRegisteredLaboratory"
                    android:textColor="#000000"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/ll1vdcv2_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:orientation="vertical"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:nestedScrollingEnabled="false"/>


            </RelativeLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/myProgressRegis_id"
        android:layout_width="match_parent"
        android:background="#e6e6e6"
        android:layout_height="wrap_content"
        android:foregroundGravity="bottom"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>