<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff" >

    <ScrollView
        android:id="@+id/scrollview1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll12" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <TextView
                    android:id="@+id/txtlabname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/changelabbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_gravity="center"
                    android:background="@drawable/labchange" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llrb"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/ll"
                android:layout_marginTop="10dp"
                android:background="#0054A6"
                android:orientation="horizontal" >

                <RadioGroup
                    android:id="@+id/radioCollectionFrom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radiobuttonHome"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1.5"
                        android:buttonTint="#ffffff"
                        android:checked="true"
                        android:text="@string/rb_home"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/radiobuttonLab"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="#ffffff"
                        android:text="@string/rb_lab"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llrb"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >

                <RadioGroup
                    android:id="@+id/radioCollection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radioResidence"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#000000"
                        android:checked="true"
                        android:text="Residence" />

                    <RadioButton
                        android:id="@+id/radioOffice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#000000"
                        android:text="Office" />

                    <RadioButton
                        android:id="@+id/radioOther"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#000000"
                        android:text="Other" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll4"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <EditText
                    android:id="@+id/etaddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/ent_add"
                    android:maxEms="4"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll9"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <EditText
                    android:id="@+id/etpincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ent_pin"
                    android:layout_marginRight="10dp"
                    android:inputType="number"
                    android:maxEms="4"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llrb"
                android:layout_above="@+id/ll_docname"
                android:layout_marginTop="0dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="gone" >

                <ListView
                    android:id="@+id/listView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:choiceMode="singleChoice"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" >
                </ListView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_seperator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll10"
                android:orientation="horizontal" >

                <ImageButton
                    android:id="@+id/seperator"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/seprator" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_docname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <EditText
                    android:id="@+id/etRefDoc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"

                    android:hint="Referring doctor name"
                    android:maxEms="4"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/cross" />
            </LinearLayout>

            <!-- <LinearLayout
                android:id="@+id/ll_docnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_docname"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <EditText
                    android:id="@+id/etRefDocNum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:hint="Referring doctor number"
                    android:inputType="number"
                    android:maxEms="4"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/clear1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/cross" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_docEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_docnumber"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <EditText
                    android:id="@+id/etRefDocEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="15dp"
                    android:hint="Referring doctor email"
                    android:inputType="textEmailAddress"
                    android:maxEms="4"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="20sp" />
              
                <ImageButton
                    android:id="@+id/clear2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/cross" />
               
            </LinearLayout> -->

            <LinearLayout
                android:id="@+id/linearlayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/btnSelectDoc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/textviewstylelab"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="OR Select Referring Doctor"
                    android:textColor="#0054A6"
                    android:textStyle="bold"
                    android:typeface="normal" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/QuickBookButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5"
            android:background="#0054A6"
            android:text="Quick Book"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:typeface="normal" />

        <Button
            android:id="@+id/btnproceed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5"
            android:background="#0054A6"
            android:text="@string/proceed"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>